--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <header class="main-header">
+        
+    </header>
+    <div class="location">
+
+    </div>
+    <section class="book">
+
+    </section>
+    <section class="working">
+
+    </section>
+    <section class="restaurants">
+
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
