Changes on the header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header class="main-header">
-        
+        <img src="./images/logo/ohmyfood.png" alt="" class="logo">
     </header>
-    <div class="location">
+    <!-- <div class="location">
 
     </div>
     <section class="book">
@@ -25,6 +25,6 @@
     </section>
     <footer>
 
-    </footer>
+    </footer> -->
 </body>
 </html>
