work on location section and change size of logo

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood - Accueil</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://kit.fontawesome.com/2fa5b85393.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="main-header">
         <img src="./images/logo/ohmyfood.png" alt="" class="logo">
     </header>
-    <!-- <div class="location">
-
+    <div class="location">
+        <p><i class="fa-sharp fa-solid fa-location-dot"></i> Paris, Belleville</p>
     </div>
-    <section class="book">
+    <!-- <section class="book">
 
     </section>
     <section class="working">
