work on book section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <div class="location">
         <p><i class="fa-sharp fa-solid fa-location-dot"></i> Paris, Belleville</p>
     </div>
-    <!-- <section class="book">
-
+    <section class="book">
+        <h1>Réservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+        <a href="">Explorer nos restaurants</a>
     </section>
-    <section class="working">
+    <!-- <section class="working">
 
     </section>
     <section class="restaurants">
