Add title (h1), text (p) and button (a) in book section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="book">
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a href="">Explorer nos restaurants</a>
+        <a href="#" class="explore">Explorer nos restaurants</a>
     </section>
     <!-- <section class="working">
 
