Realization of the working section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
         <a href="#" class="explore">Explorer nos restaurants</a>
     </section>
-    <!-- <section class="working">
+    <section class="working">
+        <h2>Fonctionnement</h2>
 
+        <a href="" class="working-button"><span class="circle"></span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</a>
+        <a href="" class="working-button"><span class="circle"></span><i class="fa-solid fa-list"></i> Composez votre menu</a>
+        <a href="" class="working-button"><span class="circle"></span><i class="fa-solid fa-store"></i> Dégustez au restaurant</a>
     </section>
-    <section class="restaurants">
+    <!-- <section class="restaurants">
 
     </section>
     <footer>
