Add h2 title, Buttons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <section class="working">
         <h2>Fonctionnement</h2>
 
-        <a href="" class="working-button"><span class="circle"></span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</a>
-        <a href="" class="working-button"><span class="circle"></span><i class="fa-solid fa-list"></i> Composez votre menu</a>
-        <a href="" class="working-button"><span class="circle"></span><i class="fa-solid fa-store"></i> Dégustez au restaurant</a>
+        <a href="" class="working-button"><span class="circle">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</a>
+        <a href="" class="working-button"><span class="circle">2</span><i class="fa-solid fa-list"></i> Composez votre menu</a>
+        <a href="" class="working-button"><span class="circle">3</span><i class="fa-solid fa-store"></i> Dégustez au restaurant</a>
     </section>
     <!-- <section class="restaurants">
 
