Restaurants section with title and cards (image + label + title, subtitle and heart

--- a/index.html
+++ b/index.html
@@ -27,10 +27,74 @@
         <a href="" class="working-button"><span class="circle">2</span><i class="fa-solid fa-list"></i> Composez votre menu</a>
         <a href="" class="working-button"><span class="circle">3</span><i class="fa-solid fa-store"></i> Dégustez au restaurant</a>
     </section>
-    <!-- <section class="restaurants">
+    <section class="restaurants">
+        <h2>Restaurants</h2>
 
+        <div class="card-restaurant">
+            <div class="img-container">
+                <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="label-new">Nouveau</div>
+            </div>
+            <div class="text-container">
+                <div class="text">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+                <div class="heart">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-restaurant">
+            <div class="img-container">
+                <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="label-new">Nouveau</div>
+            </div>
+            <div class="text-container">
+                <div class="text">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+                <div class="heart">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-restaurant">
+            <div class="img-container">
+                <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="label-new">Nouveau</div>
+            </div>
+            <div class="text-container">
+                <div class="text">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+                <div class="heart">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-restaurant">
+            <div class="img-container">
+                <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="label-new">Nouveau</div>
+            </div>
+            <div class="text-container">
+                <div class="text">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+                <div class="heart">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </div>
+        </div>
     </section>
-    <footer>
+    <!-- <footer>
 
     </footer> -->
 </body>
