--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="restaurants">
         <h2>Restaurants</h2>
 
-        <div class="card-restaurant">
+        <a href="#"><div class="card-restaurant">
             <div class="img-container">
                 <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                 <div class="label-new">Nouveau</div>
@@ -44,11 +44,11 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-        </div>
+        </div></a>
 
-        <div class="card-restaurant">
+        <a href="#"><div class="card-restaurant">
             <div class="img-container">
-                <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <img class="img-card" src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                 <div class="label-new">Nouveau</div>
             </div>
             <div class="text-container">
@@ -60,12 +60,11 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-        </div>
+        </div></a>
 
-        <div class="card-restaurant">
+        <a href="#"><div class="card-restaurant">
             <div class="img-container">
-                <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                <div class="label-new">Nouveau</div>
+                <img class="img-card" src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
             </div>
             <div class="text-container">
                 <div class="text">
@@ -76,12 +75,11 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-        </div>
+        </div></a>
 
-        <div class="card-restaurant">
+        <a href="#"><div class="card-restaurant">
             <div class="img-container">
-                <img class="img-card" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                <div class="label-new">Nouveau</div>
+                <img class="img-card" src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
             </div>
             <div class="text-container">
                 <div class="text">
@@ -92,7 +90,7 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-        </div>
+        </div></a>
     </section>
     <!-- <footer>
 
