Add variables for colors, center working section title

--- a/index.html
+++ b/index.html
@@ -92,8 +92,15 @@
             </div>
         </div></a>
     </section>
-    <!-- <footer>
-
-    </footer> -->
+    <footer class="footer">
+        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="">
+        
+        <ul>
+            <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
