--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header class="main-header">
+        <div class="return"></div>
         <img src="./images/logo/ohmyfood.png" alt="" class="logo">
+        <div class="header-right"></div>
     </header>
     <div class="location">
         <p><i class="fa-sharp fa-solid fa-location-dot"></i> Paris, Belleville</p>
