Menu page work, change class on return button, add menu section with menus and styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="return"></div>
+        <div class="return-button"></div>
         <img src="./images/logo/ohmyfood.png" alt="" class="logo">
         <div class="header-right"></div>
     </header>
