--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -16,11 +16,138 @@
         <img src="./images/logo/ohmyfood.png" alt="" class="logo">
         <div class="header-right"></div>
     </header>
+
     <div class="img-section">
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="img-cover">
     </div>
+
     <section class="menu-section">
-        
+        <div class="title-menu">
+            <h1 class="title">A la française</h1>
+            <div class="title-heart"><i class="fa-regular fa-heart"></i></div>
+        </div>
+        <div class="menu">
+            <h2>Entrées</h2>
+
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Tarte de poulpe acidulé</h3>
+                    <p>Aux zestes d'orange</p>
+                </div>
+                <div class="item-price">
+                    <p>25€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Velouté de légumes d'antan</h3>
+                    <p>Carottes, panais, topinambour</p>
+                </div>
+                <div class="item-price">
+                    <p>35€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Soupe à l'oignon</h3>
+                    <p>Revisitée</p>
+                </div>
+                <div class="item-price">
+                    <p>20€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="menu">
+            <h2>Plats</h2>
+
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Coquilles Saint-Jacques</h3>
+                    <p>Accompagnées d'une purée de panais</p>
+                </div>
+                <div class="item-price">
+                    <p>40€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Magret de canard</h3>
+                    <p>Et parmentier de pommes de terre</p>
+                </div>
+                <div class="item-price">
+                    <p>35€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    <p>Sur son lit de gnocchis aux légumes</p>
+                </div>
+                <div class="item-price">
+                    <p>44€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="menu">
+            <h2>Désserts</h2>
+
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Pétales de violettes glacés</h3>
+                    <p>Et purée de noisettes</p>
+                </div>
+                <div class="item-price">
+                    <p>18€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Fondant au chocolat</h3>
+                    <p>Revisité</p>
+                </div>
+                <div class="item-price">
+                    <p>22€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Millefeuille croustillant</h3>
+                    <p>Myrtilles et pâte d'amande</p>
+                </div>
+                <div class="item-price">
+                    <p>23€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
