--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -148,6 +148,9 @@
                 </div>
             </div>
         </div>
+
+        <a class="buy-link" href="#"><div class="button-buy">Commander</div></a>
+
     </section>
 
     <footer class="footer">
