Add police, change margin, change style of price and buy button

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </div>
             <div class="text-container">
                 <div class="text">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
                 </div>
                 <div class="heart">
                     <i class="fa-regular fa-heart"></i>
@@ -70,8 +70,8 @@
             </div>
             <div class="text-container">
                 <div class="text">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
+                    <h3>A la française</h3>
+                    <p>Cité Rouge</p>
                 </div>
                 <div class="heart">
                     <i class="fa-regular fa-heart"></i>
@@ -85,8 +85,8 @@
             </div>
             <div class="text-container">
                 <div class="text">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
                 </div>
                 <div class="heart">
                     <i class="fa-regular fa-heart"></i>
