Creation pages of menus

--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu à la française - Ohmyfood</title>
+    <title>Menu La note enchantée - Ohmyfood</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/2fa5b85393.js" crossorigin="anonymous"></script>
 </head>
@@ -13,17 +13,17 @@
         <div class="return-button">
             <a href="#"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-        <img src="./images/logo/ohmyfood.png" alt="" class="logo">
+        <img src="./images/logo/ohmyfood.png" alt="Logo du site dans le header" class="logo">
         <div class="header-right"></div>
     </header>
 
     <div class="img-section">
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="img-cover">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'illustration de la page de menu" class="img-cover">
     </div>
 
     <section class="menu-section">
         <div class="title-menu">
-            <h1 class="title">À la française</h1>
+            <h1 class="title">La note enchantée</h1>
             <div class="title-heart"><i class="fa-regular fa-heart"></i></div>
         </div>
         <div class="menu">
@@ -31,8 +31,8 @@
 
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Tarte de poulpe acidulé</h3>
-                    <p>Aux zestes d'orange</p>
+                    <h3>Ravioles de foie gras</h3>
+                    <p>Accompagnées de leur crème à la truffe</p>
                 </div>
                 <div class="item-price">
                     <p>25€</p>
@@ -43,8 +43,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <p>Carottes, panais, topinambour</p>
+                    <h3>Caviar osciètre</h3>
+                    <p>Sur blini à la farine de blé noir</p>
                 </div>
                 <div class="item-price">
                     <p>35€</p>
@@ -55,11 +55,23 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Soupe à l'oignon</h3>
-                    <p>Revisitée</p>
+                    <h3>Homard et espuma de</h3>
+                    <p>Marinés aux zestes d'orange</p>
                 </div>
                 <div class="item-price">
                     <p>20€</p>
+                </div>
+                <div class="item-select">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </div>
+            <div class="menu-item">
+                <div class="item-text">
+                    <h3>Foie gras de canard cuit entier</h3>
+                    <p>Confiture de figue et pain toasté</p>
+                </div>
+                <div class="item-price">
+                    <p>35€</p>
                 </div>
                 <div class="item-select">
                     <i class="fa-solid fa-circle-check"></i>
@@ -72,8 +84,8 @@
 
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <p>Accompagnées d'une purée de panais</p>
+                    <h3>Noix de coquilles Saint-Jacques</h3>
+                    <p>Sur lit de purée de céleri-rave</p>
                 </div>
                 <div class="item-price">
                     <p>40€</p>
@@ -84,8 +96,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Magret de canard</h3>
-                    <p>Et parmentier de pommes de terre</p>
+                    <h3>Langoustine poêlée</h3>
+                    <p>Et purée de patate douce</p>
                 </div>
                 <div class="item-price">
                     <p>35€</p>
@@ -96,8 +108,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p>Sur son lit de gnocchis aux légumes</p>
+                    <h3>Mijoté de queue de boeuf</h3>
+                    <p>Et riz sauvage aux zestes de citron</p>
                 </div>
                 <div class="item-price">
                     <p>44€</p>
@@ -113,8 +125,8 @@
 
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes</p>
+                    <h3>Macaron noisette et chocolat</h3>
+                    <p>Glace au caramel brun et sel de Guérande</p>
                 </div>
                 <div class="item-price">
                     <p>18€</p>
@@ -125,8 +137,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Fondant au chocolat</h3>
-                    <p>Revisité</p>
+                    <h3>Baba au rhum revisité</h3>
+                    <p>Avec son coulis de citron</p>
                 </div>
                 <div class="item-price">
                     <p>22€</p>
@@ -137,8 +149,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Millefeuille croustillant</h3>
-                    <p>Myrtilles et pâte d'amande</p>
+                    <h3>Tarte au citron meringuée</h3>
+                    <p>Déstructurée</p>
                 </div>
                 <div class="item-price">
                     <p>23€</p>
@@ -154,7 +166,7 @@
     </section>
 
     <footer class="footer">
-        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="">
+        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="Logo du site dans le footer">
         
         <ul>
             <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
