--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu à la française - Ohmyfood</title>
+    <title>Menu La palette du gout - Ohmyfood</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/2fa5b85393.js" crossorigin="anonymous"></script>
 </head>
@@ -13,17 +13,17 @@
         <div class="return-button">
             <a href="#"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
-        <img src="./images/logo/ohmyfood.png" alt="" class="logo">
+        <img src="./images/logo/ohmyfood.png" alt="Logo du site dans le header" class="logo">
         <div class="header-right"></div>
     </header>
 
     <div class="img-section">
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="img-cover">
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'illustration de la page de menu" class="img-cover">
     </div>
 
     <section class="menu-section">
         <div class="title-menu">
-            <h1 class="title">À la française</h1>
+            <h1 class="title">La palette du goût</h1>
             <div class="title-heart"><i class="fa-regular fa-heart"></i></div>
         </div>
         <div class="menu">
@@ -31,8 +31,8 @@
 
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Tarte de poulpe acidulé</h3>
-                    <p>Aux zestes d'orange</p>
+                    <h3>Fricassée d'escargots</h3>
+                    <p>Au piment d'Espelette</p>
                 </div>
                 <div class="item-price">
                     <p>25€</p>
@@ -43,8 +43,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <p>Carottes, panais, topinambour</p>
+                    <h3>Foie gras de canard mi-cuit</h3>
+                    <p>Et ses copeaux de truffe noire</p>
                 </div>
                 <div class="item-price">
                     <p>35€</p>
@@ -55,8 +55,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Soupe à l'oignon</h3>
-                    <p>Revisitée</p>
+                    <h3>Oeuf au plat</h3>
+                    <p>Assaisonné à la truffe sur lit de</p>
                 </div>
                 <div class="item-price">
                     <p>20€</p>
@@ -72,8 +72,8 @@
 
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <p>Accompagnées d'une purée de panais</p>
+                    <h3>Filet de boeuf aux herbes</h3>
+                    <p>Accompagné de sa ribambelle de légumes</p>
                 </div>
                 <div class="item-price">
                     <p>40€</p>
@@ -84,8 +84,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Magret de canard</h3>
-                    <p>Et parmentier de pommes de terre</p>
+                    <h3>Parmentier de queue de boeuf</h3>
+                    <p>A la truffe noire sur sa purée de panais</p>
                 </div>
                 <div class="item-price">
                     <p>35€</p>
@@ -96,8 +96,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p>Sur son lit de gnocchis aux légumes</p>
+                    <h3>Filet de turbot</h3>
+                    <p>Aux agrumes</p>
                 </div>
                 <div class="item-price">
                     <p>44€</p>
@@ -113,8 +113,8 @@
 
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes</p>
+                    <h3>Paris-Brest</h3>
+                    <p>Revisité</p>
                 </div>
                 <div class="item-price">
                     <p>18€</p>
@@ -125,8 +125,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Fondant au chocolat</h3>
-                    <p>Revisité</p>
+                    <h3>Macaron au chocolat d'exception</h3>
+                    <p>Et glace à la vanille de madagascar</p>
                 </div>
                 <div class="item-price">
                     <p>22€</p>
@@ -137,8 +137,8 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Millefeuille croustillant</h3>
-                    <p>Myrtilles et pâte d'amande</p>
+                    <h3>Mousse au chocolat</h3>
+                    <p>Au piment d'Espelette et à la truffe noire</p>
                 </div>
                 <div class="item-price">
                     <p>23€</p>
@@ -154,7 +154,7 @@
     </section>
 
     <footer class="footer">
-        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="">
+        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="Logo du site dans le footer">
         
         <ul>
             <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
