--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <script src="https://kit.fontawesome.com/2fa5b85393.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="loader">
+        <div class="loader-spinner"></div>
+    </div>
     <header class="main-header">
         <div class="return-button"></div>
-        <img src="./images/logo/ohmyfood.png" alt="" class="logo">
+        <img src="./images/logo/ohmyfood.png" alt="Logo du site dans le header" class="logo">
         <div class="header-right"></div>
     </header>
     <div class="location">
@@ -25,16 +28,16 @@
     <section class="working">
         <h2>Fonctionnement</h2>
 
-        <a href="" class="working-button"><span class="circle">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</a>
-        <a href="" class="working-button"><span class="circle">2</span><i class="fa-solid fa-list"></i> Composez votre menu</a>
-        <a href="" class="working-button"><span class="circle">3</span><i class="fa-solid fa-store"></i> Dégustez au restaurant</a>
+        <a href="#" class="working-button"><span class="circle">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</a>
+        <a href="#" class="working-button"><span class="circle">2</span><i class="fa-solid fa-list"></i> Composez votre menu</a>
+        <a href="#" class="working-button"><span class="circle">3</span><i class="fa-solid fa-store"></i> Dégustez au restaurant</a>
     </section>
     <section class="restaurants">
         <h2>Restaurants</h2>
 
-        <a href="#"><div class="card-restaurant">
+        <a href="menu-la-palette-du-gout.html"><div class="card-restaurant">
             <div class="img-container">
-                <img class="img-card" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <img class="img-card" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'illustration du restaurant La palette du goût">
                 <div class="label-new">Nouveau</div>
             </div>
             <div class="text-container">
@@ -48,9 +51,9 @@
             </div>
         </div></a>
 
-        <a href="#"><div class="card-restaurant">
+        <a href="menu-la-note-enchantee.html"><div class="card-restaurant">
             <div class="img-container">
-                <img class="img-card" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                <img class="img-card" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'illustration du restaurant La note enchantée">
                 <div class="label-new">Nouveau</div>
             </div>
             <div class="text-container">
@@ -64,9 +67,9 @@
             </div>
         </div></a>
 
-        <a href="#"><div class="card-restaurant">
+        <a href="menu-a-la-francaise.html"><div class="card-restaurant">
             <div class="img-container">
-                <img class="img-card" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                <img class="img-card" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'illustration du restaurant A la française">
             </div>
             <div class="text-container">
                 <div class="text">
@@ -79,9 +82,9 @@
             </div>
         </div></a>
 
-        <a href="#"><div class="card-restaurant">
+        <a href="menu-le-delice-des-sens.html"><div class="card-restaurant">
             <div class="img-container">
-                <img class="img-card" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                <img class="img-card" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'illustration du restaurant Le délice des sens">
             </div>
             <div class="text-container">
                 <div class="text">
@@ -95,13 +98,13 @@
         </div></a>
     </section>
     <footer class="footer">
-        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="">
+        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="Logo du site dans le footer">
         
         <ul>
             <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 </body>
