--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -11,7 +11,7 @@
 <body>
     <header class="main-header">
         <div class="return-button">
-            <a href="#"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="/"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
         <img src="./images/logo/ohmyfood.png" alt="Logo du site dans le header" class="logo">
         <div class="header-right"></div>
@@ -160,7 +160,7 @@
             <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
         </ul>
     </footer>
 </body>
