Add responsive styles

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://kit.fontawesome.com/2fa5b85393.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="loader">
+    <!-- <div class="loader">
         <div class="loader-spinner"></div>
-    </div>
+    </div> -->
     <header class="main-header">
         <div class="return-button"></div>
         <img src="./images/logo/ohmyfood.png" alt="Logo du site dans le header" class="logo">
