--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p>Ménilmontant</p>
                 </div>
                 <div class="heart">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
             </div>
         </div></a>
@@ -62,7 +62,7 @@
                     <p>Charonne</p>
                 </div>
                 <div class="heart">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
             </div>
         </div></a>
@@ -77,7 +77,7 @@
                     <p>Cité Rouge</p>
                 </div>
                 <div class="heart">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
             </div>
         </div></a>
@@ -92,7 +92,7 @@
                     <p>Folie-Méricourt</p>
                 </div>
                 <div class="heart">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
             </div>
         </div></a>
