--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -24,7 +24,7 @@
     <section class="menu-section">
         <div class="title-menu">
             <h1 class="title">À la française</h1>
-            <div class="title-heart"><i class="fa-regular fa-heart"></i></div>
+            <div class="title-heart"><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></div>
         </div>
         <div class="menu">
             <h2>Entrées</h2>
