Change a link style to button in working section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <section class="working">
         <h2>Fonctionnement</h2>
 
-        <a href="#" class="working-button"><span class="circle">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</a>
-        <a href="#" class="working-button"><span class="circle">2</span><i class="fa-solid fa-list"></i> Composez votre menu</a>
-        <a href="#" class="working-button"><span class="circle">3</span><i class="fa-solid fa-store"></i> Dégustez au restaurant</a>
+        <button class="working-button"><span class="circle">1</span><i class="fa-solid fa-mobile-screen-button"></i> Choisissez un restaurant</button>
+        <button class="working-button"><span class="circle">2</span><i class="fa-solid fa-list"></i> Composez votre menu</button>
+        <button class="working-button"><span class="circle">3</span><i class="fa-solid fa-store"></i> Dégustez au restaurant</button>
     </section>
     <section class="restaurants">
         <h2>Restaurants</h2>
