Change styles of buttons on main page and menu page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <section class="book">
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a href="#" class="explore">Explorer nos restaurants</a>
+        <!-- <a href="#" class="explore">Explorer nos restaurants</a> -->
+        <button class="explore">Explorer nos restaurants</button>
     </section>
     <section class="working">
         <h2>Fonctionnement</h2>
