--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -11,7 +11,7 @@
 <body>
     <header class="main-header">
         <div class="return-button">
-            <a href="/"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="./"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
         <img src="./images/logo/ohmyfood.png" alt="Logo du site dans le header" class="logo">
         <div class="header-right"></div>
