Clear code and change div menu-section to an section

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -17,9 +17,9 @@
         <div class="header-right"></div>
     </header>
 
-    <div class="img-section">
+    <section class="img-section">
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="img-cover">
-    </div>
+    </section>
 
     <section class="menu-section">
         <div class="title-menu">
