--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -17,9 +17,9 @@
         <div class="header-right"></div>
     </header>
 
-    <div class="img-section">
+    <section class="img-section">
         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'illustration de la page de menu" class="img-cover">
-    </div>
+    </section>
 
     <section class="menu-section">
         <div class="title-menu">
