--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div></a>
     </section>
     <footer class="footer">
-        <img class="logo-footer" src="images/logo/ohmyfood.png" alt="Logo du site dans le footer">
+        <img class="logo-footer" src="images/logo/ohmyfood@2x.svg" alt="Logo du site dans le footer">
         
         <ul>
             <li><a href="#"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
