--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -31,7 +31,7 @@
 
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Tarte de poulpe acidulé</h3>
+                    <h3>Tartare de poulpe acidulé</h3>
                     <p>Aux zestes d'orange</p>
                 </div>
                 <div class="item-price">
@@ -44,7 +44,7 @@
             <div class="menu-item">
                 <div class="item-text">
                     <h3>Velouté de légumes d'antan</h3>
-                    <p>Carottes, panais, topinambour</p>
+                    <p>Carotte, panais, topinambour</p>
                 </div>
                 <div class="item-price">
                     <p>35€</p>
