--- a/menu-le-delice-des-sens.html
+++ b/menu-le-delice-des-sens.html
@@ -84,7 +84,7 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Langouste rôti</h3>
+                    <h3>Langouste rôtie</h3>
                     <p>Et ses légumes de saison</p>
                 </div>
                 <div class="item-price">
