--- a/menu-la-note-enchantee.html
+++ b/menu-la-note-enchantee.html
@@ -55,7 +55,7 @@
             </div>
             <div class="menu-item">
                 <div class="item-text">
-                    <h3>Homard et espuma de</h3>
+                    <h3>Homard et espuma de potiron</h3>
                     <p>Marinés aux zestes d'orange</p>
                 </div>
                 <div class="item-price">
