--- a/menu-la-palette-du-gout.html
+++ b/menu-la-palette-du-gout.html
@@ -56,7 +56,7 @@
             <div class="menu-item">
                 <div class="item-text">
                     <h3>Oeuf au plat</h3>
-                    <p>Assaisonné à la truffe sur lit de</p>
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
                 </div>
                 <div class="item-price">
                     <p>20€</p>
@@ -126,7 +126,7 @@
             <div class="menu-item">
                 <div class="item-text">
                     <h3>Macaron au chocolat d'exception</h3>
-                    <p>Et glace à la vanille de madagascar</p>
+                    <p>Et glace à la vanille de Madagascar</p>
                 </div>
                 <div class="item-price">
                     <p>22€</p>
