--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section class="restaurants">
         <h2>Restaurants</h2>
 
-        <a href="menu-la-palette-du-gout.html"><div class="card-restaurant">
-            <div class="img-container">
+        <div class="card-restaurant">
+            <a href="menu-la-palette-du-gout.html"><div class="img-container">
                 <img class="img-card" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'illustration du restaurant La palette du goût">
                 <div class="label-new">Nouveau</div>
             </div>
@@ -48,11 +48,11 @@
                 <div class="heart">
                     <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
-            </div>
-        </div></a>
+            </div></a>
+        </div>
 
-        <a href="menu-la-note-enchantee.html"><div class="card-restaurant">
-            <div class="img-container">
+        <div class="card-restaurant">
+            <a href="menu-la-note-enchantee.html"><div class="img-container">
                 <img class="img-card" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'illustration du restaurant La note enchantée">
                 <div class="label-new">Nouveau</div>
             </div>
@@ -64,11 +64,11 @@
                 <div class="heart">
                     <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
-            </div>
-        </div></a>
+            </div></a>
+        </div>
 
-        <a href="menu-a-la-francaise.html"><div class="card-restaurant">
-            <div class="img-container">
+        <div class="card-restaurant">
+            <a href="menu-a-la-francaise.html"><div class="img-container">
                 <img class="img-card" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'illustration du restaurant A la française">
             </div>
             <div class="text-container">
@@ -79,11 +79,11 @@
                 <div class="heart">
                     <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
-            </div>
-        </div></a>
+            </div></a>
+        </div>
 
-        <a href="menu-le-delice-des-sens.html"><div class="card-restaurant">
-            <div class="img-container">
+        <div class="card-restaurant">
+            <a href="menu-le-delice-des-sens.html"><div class="img-container">
                 <img class="img-card" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'illustration du restaurant Le délice des sens">
             </div>
             <div class="text-container">
@@ -94,8 +94,8 @@
                 <div class="heart">
                     <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
                 </div>
-            </div>
-        </div></a>
+            </div></a>
+        </div>
     </section>
     <footer class="footer">
         <img class="logo-footer" src="images/logo/ohmyfood@2x.svg" alt="Logo du site dans le footer">
